--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo">Pizza Pie</a>
+        <a href="#" class="logo">🧀 Mozza ✨ Magic</a>
         <div class="bx bx-menu" id="menu-icon"></div>
  
         <ul class="navbar">
@@ -31,7 +31,7 @@
     <!-- Home  Section-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Pizza Taste</h1>
+            <h1>🍕 Pizza 😋 Delight</h1>
             <h2>The tasty pizza of <br> your choice</h2>
             <a href="#" class="btn">View Menu</a>
         </div>
