--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🍕 Pizza Bliss - Fresh & Tasty 🍅</title>
     <!-- Box Icons -->
-    <link rel="stylesheet"
-  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-  <!-- Link To CSS -->
-  <link rel="stylesheet" href="styles.css">
-   
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <!-- Link To CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navbar -->
     <header>
         <a href="#" class="logo">🧀 Mozza ✨ Magic</a>
         <div class="bx bx-menu" id="menu-icon"></div>
- 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -28,122 +25,123 @@
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
-    <!-- Home  Section-->
+    
+    <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>🍕 Pizza 😋 Delight</h1>
-            <h2>The tasty pizza of <br> your choice</h2>
-            <a href="#" class="btn">View Menu</a>
+            <h1>🍕 Welcome to Pizza Bliss! 😋</h1>
+            <h2>Your haven for authentic and delicious pizza</h2>
+            <a href="#" class="btn">Explore Our Menu</a>
         </div>
         <div class="home-img">
-            <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80.png" alt="">
+            <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80.png" alt="Delicious Pizza">
         </div>
     </section>
- 
-    <!-- About -->
+
+    <!-- About Section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395__480.jpg" alt="">
+            <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395__480.jpg" alt="About Pizza Bliss">
         </div>
         <div class="about-text">
             <span>About Us</span>
-            <h2>We make good and <br> tasty pizzas</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quo iure rem ducimus tenetur deserunt commodi doloribus, quibusdam vel fuga?</p>
-            <a href="#" class="btn">Learn More</a>
+            <h2>Passionate about Crafting Perfect Pizzas</h2>
+            <p>At Pizza Bliss, we believe that great pizza starts with quality ingredients. Our chefs are dedicated to creating mouth-watering flavors that will transport you to Italy with every bite. From classic Margherita to unique gourmet options, there's something for everyone!</p>
+            <a href="#" class="btn">Discover Our Story</a>
         </div>
     </section>
- 
-    <!-- Menu -->
+
+    <!-- Menu Section -->
     <section class="menu" id="menu">
         <div class="heading">
             <span>Menu</span>
-            <h2>Tasty menu of the week</h2>
+            <h2>Indulge in Our Exquisite Pizza Selection</h2>
         </div>
         <div class="menu-container">
             <!-- Box 1 -->
             <div class="box">
                 <div class="box-img">
-                    <img src="https://images.pexels.com/photos/803290/pexels-photo-803290.jpeg?cs=srgb&dl=pexels-beqa-tefnadze-803290.jpg&fm=jpg" alt="">
+                    <img src="https://images.pexels.com/photos/803290/pexels-photo-803290.jpeg?cs=srgb&dl=pexels-beqa-tefnadze-803290.jpg&fm=jpg" alt="Cheese Pizza">
                 </div>
-                <h2>Cheese Pizza</h2>
-                <h3>Tasty Food</h3>
+                <h2>Classic Cheese Pizza</h2>
+                <h3>A timeless favorite</h3>
                 <span>$30.05</span>
                 <i class='bx bx-cart-alt'></i>
             </div>
             <!-- Box 2 -->
             <div class="box">
                 <div class="box-img">
-                    <img src="https://img.freepik.com/free-photo/pepperoni-pizza-with-sausages-cheese-dark-wooden-table_220768-9277.jpg?size=626&ext=jpg" alt="">
+                    <img src="https://img.freepik.com/free-photo/pepperoni-pizza-with-sausages-cheese-dark-wooden-table_220768-9277.jpg?size=626&ext=jpg" alt="Tropical Pizza">
                 </div>
-                <h2>Tropical Pizza</h2>
-                <h3>Tasty Food</h3>
+                <h2>Tropical Delight Pizza</h2>
+                <h3>A burst of tropical flavors</h3>
                 <span>$42.05</span>
                 <i class='bx bx-cart-alt'></i>
             </div>
             <!-- Box 3 -->
             <div class="box">
                 <div class="box-img">
-                    <img src="https://img.freepik.com/free-photo/top-view-pepperoni-pizza-with-mushroom-sausages-bell-pepper-olive-corn-black-wooden_141793-2158.jpg?w=740&t=st=1661842808~exp=1661843408~hmac=c40f0c154036b96b1dba17947c4e4f7c07f40db983106490402bb0b7b6ec452e" alt="">
+                    <img src="https://img.freepik.com/free-photo/top-view-pepperoni-pizza-with-mushroom-sausages-bell-pepper-olive-corn-black-wooden_141793-2158.jpg?w=740&t=st=1661842808~exp=1661843408~hmac=c40f0c154036b96b1dba17947c4e4f7c07f40db983106490402bb0b7b6ec452e" alt="Mecaroni Pizza">
                 </div>
-                <h2>Mecaroni Pizza</h2>
-                <h3>Tasty Food</h3>
+                <h2>Special Mecaroni Pizza</h2>
+                <h3>For pasta lovers!</h3>
                 <span>$12.05</span>
                 <i class='bx bx-cart-alt'></i>
             </div>
         </div>
     </section>
- 
-    <!-- Service -->
+
+    <!-- Services Section -->
     <section class="services" id="services">
         <div class="heading">
             <span>Services</span>
-            <h2>We provide best food services</h2>
+            <h2>Your Satisfaction is Our Priority</h2>
         </div>
- 
+
         <div class="servives-container">
             <!-- Box 1 -->
             <div class="s-box">
-                <img src="https://images.pexels.com/photos/280453/pexels-photo-280453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="">
-                <h3>You Order</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
+                <img src="https://images.pexels.com/photos/280453/pexels-photo-280453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="Ordering Service">
+                <h3>Easy Ordering</h3>
+                <p>Order your favorite pizzas online with just a few clicks. Our user-friendly interface makes it simple and fast!</p>
             </div>
             <!-- Box 2 -->
             <div class="s-box">
-                <img src="https://images.pexels.com/photos/4391470/pexels-photo-4391470.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="">
-                <h3>Shipping</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
+                <img src="https://images.pexels.com/photos/4391470/pexels-photo-4391470.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="Fast Shipping">
+                <h3>Quick Delivery</h3>
+                <p>We ensure your pizzas are delivered hot and fresh to your doorstep in no time, so you can enjoy them at their best.</p>
             </div>
             <!-- Box 3 -->
             <div class="s-box">
-                <img src="https://images.pexels.com/photos/4393426/pexels-photo-4393426.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="">
-                <h3>Delivered</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
+                <img src="https://images.pexels.com/photos/4393426/pexels-photo-4393426.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500.png" alt="Delivery Service">
+                <h3>Reliable Service</h3>
+                <p>Our team is dedicated to providing top-notch service, ensuring your dining experience is nothing short of amazing!</p>
             </div>
         </div>
     </section>
- 
-    <!-- Connect -->
+
+    <!-- Connect Section -->
     <section class="connect">
         <div class="connect-text">
-            <span>Let's Talk</span>
-            <h2>Connect now</h2>
+            <span>Join the Conversation</span>
+            <h2>Connect with Us Today!</h2>
         </div>
-        <a href="#" class="btn">Contact Us</a>
+        <a href="#" class="btn">Contact Our Team</a>
     </section>
- 
-    <!-- Contact -->
+
+    <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="contact-box">
-            <h3>Pizza Pie</h3>
+            <h3>Get in Touch</h3>
             <span>Connect With Us</span>
             <div class="social">
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
         </div>
         <div class="contact-box">
-            <h3>Menu Links</h3>
+            <h3>Quick Menu Links</h3>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
@@ -151,29 +149,28 @@
             <li><a href="#contact">Contact</a></li>
         </div>
         <div class="contact-box">
-            <h3>Quick Links</h3>
+            <h3>Additional Resources</h3>
             <li><a href="#Contact">Contact</a></li>
             <li><a href="#Privacy Policy">Privacy Policy</a></li>
             <li><a href="#Disclaimer">Disclaimer</a></li>
             <li><a href="#Terms Of Use">Terms Of Use</a></li>
         </div>
         <div class="contact-box address">
-            <h3>Contact</h3>
-            <i class='bx bxs-map' ><span>005, Lorem ipsum dolor, sit amet consectetur, India</span></i>
-            <i class='bx bxs-phone' ><span>+91 000 999 5555</span></i>
-            <i class='bx bxs-envelope' ><span>Example@email.com</span></i>
-        </div>
+            <h3>Our Location</h3>
+            <i class='bx bxs-map'><span>123, MG Road, Bangalore, Karnataka, India</span></i>
+            <i class='bx bxs-phone'><span>+91 98765 43210</span></i>
+            <i class='bx bxs-envelope'><span>contact@pizzabliss.com</span></i>
+        </div>        
     </section>
- 
-    <!-- Copyright -->
-    <div class="copyright">
-        <p>© Toppings Treat All Right Reserved.</p>
+
+    <!-- Footer -->
+    <footer>
+        <div class="copyright">
+        <span>🍕 2024 Pizza Bliss - All Rights Reserved. 🌟</span>
     </div>
- 
- 
-    <!-- Scroll Reveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- Link To JavaScript -->
+    </footer>
+    
+    <!-- Link To JS -->
     <script src="script.js"></script>
 </body>
 </html>
