--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="manifest" href="/site.webmanifest">
     <title>🍕 Pizza Bliss - Fresh & Tasty 🍅</title>
     <!-- Box Icons -->
@@ -20,11 +21,11 @@
         <a href="#" class="logo">🧀 Mozza ✨ Magic</a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#services">Service</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="#menu"><i class="fas fa-utensils"></i> Menu</a></li>
+            <li><a href="#services"><i class="fas fa-concierge-bell"></i> Services</a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
             <!-- Dark Mode -->
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
@@ -34,7 +35,7 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>🍕 Welcome to Pizza Bliss! 😋</h1>
-            <h2>Your haven for authentic and delicious pizza</h2>
+            <h2><i class="fas fa-pizza-slice"></i> Your haven for authentic and delicious pizza <i class="fas fa-pizza-slice"></i></h2>
             <a href="#" class="btn">Explore Our Menu</a>
         </div>
         <div class="home-img">
